+ Added ability to drop a field in atkDDL. [Boy]
+ Address in mailreports is now configurable using the $config_mail_sender
  variable. [Guido]
+ atktext() and text() now support multiple fallback strings (to be supplied
  as array as first parameter). [Guido]
+ Added flag AF_DATE_EDIT_NO_DAY for date attribute to force not
  prefixing the days with the weekday. [Peter]
* Attributes can now define if they want to quote field- and tablenames.
  atkAttribute does this by default now. [Boy]
* Second parameter of atkdebug() method now accepts flags DEBUG_WARNING to
  visualize warnings and DEBUG_HTML to convert the debug string to html
  entities. [Guido]
* Sorting on atkManyToOneRelation columns now sorts on the actual value
  instead of on the id. [Ivo]
* Moved addOnChangeHandler() to atkAttribute. [Boy]
* atkNumberAttribute now renders NULL values as "" instead of 0. [Ivo]
* Replaced some deprecated text() calls with atktext(). [Yury, Guido]
* Fixed some atktext() calls without atk specified as module. [Guido]
* atkNode's postDel method is renamed to postDelete. [Boy]
* Decomposed atkNode::dispatch() to loadDispatchPage() which does the actual
  loading of the page for dispatch() to render. [Boy]
* Fixed bug in atkTreeNode that didn't allow the usage of string based key and
  parent fields. [Peter]
* Fixed bug in atkOneToOneRelation that caused the foreign key in the record
  to be stored to be an array instead of a value. [Boy]
* Made atkThemeCompiler able to handle modules not located in the atkroot.
  WARNING: when upgrading you must recompile your compiled theme by throwing
  away atktempdir/themes directory or its contents. [Boy]
* Added ability to reset instances created by atkinstance if supported by the
  node and added support for atkTheme. [Boy]
* Fixed error reporting for embeded atkOneToManyRelation. [Boy]
* atkOneToManyRelation navigation links are not shown if there is no
  filter. [Boy]